[package]
name = "ic-repl"
version = "0.7.3"
authors = ["DFINITY Team"]
edition = "2021"
default-run = "ic-repl"

[[bin]]
name = "ic-repl"
path = "src/main.rs"
doc = false

[build-dependencies]
lalrpop = "0.20"

[dependencies]
candid = { version = "0.10", features = ["all"] }
candid_parser = { version = "0.2.0-beta.1", features = ["all"] }
rustyline = "14.0"
rustyline-derive = "0.10"
console = "0.15"
pretty_assertions = "1.4"
codespan-reporting = "0.11"
pretty = "0.12"
pem = "3.0"
shellexpand = "3.1"
ic-agent = "0.36"
ic-identity-hsm = "0.36"
ic-transport-types = "0.36"
ic-wasm = { version = "0.8", default-features = false }
inferno = { version = "0.11", default-features = false, features = ["multithreaded", "nameattr"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
logos = "0.14"
lalrpop-util = "0.20"
clap = { version = "4.4", features = ["derive"] }
ring = "0.17"
rpassword = "7.2"
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
hex = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
crc32fast = "1.3"
qrcode = "0.13"
image = { version = "0.24", default-features = false, features = ["png"] }
libflate = "2.0"
base64 = "0.21"

